k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lynk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lynk
  template:
    metadata:
      labels:
        app: lynk
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: lynk
        image: tievenr/lynk:latest
        ports:
        - name: metrics
          containerPort: 8000
