k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lynk
spec:
  selector:
    app: lynk
  ports:
  - name: http
    port: 80
    targetPort: 8000
